[tool.poetry]
name = "plotcp"
version = "0.2.0"
description = ""
authors = ["Winkel <dmesser@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
sympy = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.14.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
