[tool.poetry]
name = "plotcp"
version = "0.3.1"
description = "Python package for drawing transformations of functions of a complex variable of the whole grid or a given area"
authors = ["ZetZet <dmesser@yandex.ru>", "mefolder <verybigfolder@yandex.ru>"]
license = "GNU Affero General Public License v3.0"
readme = "README.md"
repository = "https://github.com/ZettZet/plotcp"
classifiers = ["Topic :: Scientific/Engineering :: Visualization"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.14.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
